♻️ refactor: 전시리뷰 상세 조회 시, 조인 패치와, 내부 조인 사용으로 n + 1 문제 해결